# vascx-fork

./: .gitattributes  .gitignore  README.md  config.yaml  conftest.py  environment.yml  pyproject.toml  pytest.ini  run.sh  setup.sh
docs/pipeline/: README.md
notebooks/: 0_preprocess.ipynb  1_segment_preprocessed.ipynb
tests/: test_cli.py  test_config.py  test_disc_circles.py  test_e2e.py  test_inference.py  test_model_assets.py  test_pdf_fundus.py  test_pipeline.py  test_profile_widths.py  test_pvbm_widths.py  test_runtime.py  test_utils.py  test_vessel_branching.py  test_vessel_equivalents.py  test_vessel_paths.py  test_vessel_tortuosities.py  test_vessel_widths.py
vascx_models/: __main__.py  cli.py  config.py  config_schema.py  config_types.py  disc_circles.py  inference.py  model_assets.py  pdf_fundus.py  pipeline.py  profile_widths.py  pvbm_widths.py  runtime.py  utils.py  vessel_paths.py  vessel_tortuosities.py  vessel_widths.py
vascx_models/geometry/: vessel_paths.py
vascx_models/metrics/: vessel_branching.py  vessel_tortuosities.py
vascx_models/overlays/: utils.py
